Bug 134283 - "Show Page Variable" broken in 7.0Beta2
Summary: "Show Page Variable" broken in 7.0Beta2
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.beta1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.2 target:7.4.6
Keywords: bibisected, bisected, regression
: 139705 (view as bug list)
Depends on:
Blocks: Fields-Page-Count
  Show dependency treegraph
 
Reported: 2020-06-24 13:52 UTC by David Burleigh
Modified: 2024-07-28 09:03 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Video showing this reproducible bug. (7.19 MB, video/mp4)
2020-06-24 13:53 UTC, David Burleigh
Details
Source files to demonstrate bug (1.11 MB, application/zip)
2020-06-24 13:54 UTC, David Burleigh
Details
Windows demo video (747.66 KB, video/mp4)
2021-10-04 07:22 UTC, Alexander Polkhovskiy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Burleigh 2020-06-24 13:52:59 UTC
Description:
Displaying the value of the "Page Variable" fails in version 7.0Beta2, but works fine in versions 6.x and earlier versions. See the attached video.

Steps to Reproduce:
1.Unzip the attached example
2.Open Test.odm with 7.0Beta2
3.Scroll to the top of page 4
4.See that "1-" is displayed, whereas it should be "1-2"
5.View>Field Names (verify that "Show Page Variable" is present)
6.Do steps 1-5 with version 6.4 (or any earlier version) to observe difference

Actual Results:
"1-" is displayed in page 4 header.

Expected Results:
"1-2" should be displayed in page 4 header.


Reproducible: Always


User Profile Reset: No



Additional Info:
none
Comment 1 David Burleigh 2020-06-24 13:53:41 UTC
Created attachment 162373 [details]
Video showing this reproducible bug.
Comment 2 David Burleigh 2020-06-24 13:54:21 UTC
Created attachment 162374 [details]
Source files to demonstrate bug
Comment 3 Xisco Faulí 2020-06-24 15:13:00 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=aeab7de4cd2975b90d07d8b32d51efd953bbff3c

author	Bjoern Michaelsen <bjoern.michaelsen@libreoffice.org>	2020-03-14 22:16:41 +0100
committer	Björn Michaelsen <bjoern.michaelsen@libreoffice.org>	2020-03-15 02:20:02 +0100
commit aeab7de4cd2975b90d07d8b32d51efd953bbff3c (patch)
tree a96679fbcf9dd88971f9891e2d2c107099e39e2f
parent 6f82f5163fdd43ea22958dfb28926c88ed97fa7c (diff)
docufld.cxx: SwIterator no more ...

Bisected with: bibisect-linux64-7.0

Adding Cc: to Bjoern Michaelsen
Comment 4 Buovjaga 2021-02-17 14:29:58 UTC
*** Bug 139705 has been marked as a duplicate of this bug. ***
Comment 5 Buovjaga 2021-02-17 15:05:45 UTC
I noted that there are multiple stages for the symptoms. The latest, where all the headers show "1-" appeared in 7.1. The file sw/source/core/fields/docufld.cxx did receive many code changes after the one in March 2020.
Comment 6 David Burleigh 2021-09-17 19:18:32 UTC
Is anyone working on this? It's a show-stopper for me. I can't use any version after 6.4.7.2 for the work I use LibreOffice for daily.
Comment 7 Alexander Polkhovskiy 2021-10-04 07:22:56 UTC
Created attachment 175488 [details]
Windows demo video

Look what happens on Windows if you just paste PV field. It's inadequate.
Version: 7.2.1.2 (x86) / LibreOffice Community
Build ID: 87b77fad49947c1441b67c559c339af8f3517e22
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: CL
Comment 8 Justin L 2021-11-19 11:26:00 UTC
repro 7.3+
Comment 9 David Burleigh 2022-02-16 08:42:27 UTC
Can we raise the importance of fixing this bug? I'm forced to use version 6.4.7.2, which crashes often, but every subsequent version has this bug.
Comment 10 David Burleigh 2022-04-13 08:54:33 UTC Comment hidden (no-value)
Comment 11 David Burleigh 2022-05-13 08:50:43 UTC Comment hidden (no-value)
Comment 12 David Burleigh 2022-10-06 18:27:43 UTC
(In reply to David Burleigh from comment #9)
> Can we raise the importance of fixing this bug? I'm forced to use version
> 6.4.7.2, which crashes often, but every subsequent version has this bug.

Well, I reluctantly tried switching to OpenOffice, but it was horrible. Is there any hope of this bug being fixed? I would love to move up to the latest release of LibreOffice, but this bug is a show-stopper for me.
Comment 13 Björn Michaelsen 2023-02-12 16:26:32 UTC
https://gerrit.libreoffice.org/c/core/+/146828
Comment 14 David Burleigh 2023-02-12 16:30:42 UTC
I'm not well versed in these things. Does that mean that there is a build in which this bug is fixed?
Comment 15 Buovjaga 2023-02-12 17:15:32 UTC
(In reply to David Burleigh from comment #14)
> I'm not well versed in these things. Does that mean that there is a build in
> which this bug is fixed?

No, there is not a build, but there is a patch which will be reviewed and merged in due time.
Comment 16 David Burleigh 2023-02-12 17:17:25 UTC
That's very encouraging.
Comment 17 Commit Notification 2023-02-14 10:12:24 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/75a863ee7fea133ae6bcd010d1aac46815fa49e2

tdf#134283: MakeSetList should iterate Setters, not Getters

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2023-02-14 13:22:50 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/24c05688ad0db805196765a409c49f9ac6f2b6e7

tdf#134283: MakeSetList should iterate Setters, not Getters

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2023-02-14 14:50:05 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/77f447190396ca9b1bd77e3cf3b99f24116049ef

tdf#134283: MakeSetList should iterate Setters, not Getters

It will be available in 7.4.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 David Burleigh 2023-02-15 18:38:31 UTC
Fixed! Thank you!
Comment 21 Alexander Polkhovskiy 2023-02-16 17:09:24 UTC
Works fine, thank you very much!
Comment 22 Björn Michaelsen 2024-07-28 09:03:43 UTC
Resolving as fixed per Comments 20 and 21.