tdf#134283: MakeSetList should iterate Setters, not Getters

Change-Id: I811a3b562ead942c98705da29774b77c593eabc4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146828
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>